--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "VideoCompressBot",
+  "name": "NewBot",
   "description": "Telegram's best Video Compress Bot",
-  "logo": "https://telegra.ph/file/b687febf32e4d583fb1d4.jpg",
+  "logo": "",
   "keywords": [
     "telegram",
     "best",
